--- a/client/templates/layouts/_header.html
+++ b/client/templates/layouts/_header.html
@@ -33,11 +33,25 @@
         {{/if}}
 
         <ul class="nav navbar-nav navbar-right">
-          <li class="{{ isActiveRoute regex='home' }}"><a href="{{ pathFor 'home' }}"><i class="fa fa-home"></i> Home</a></li>
-          <li class="{{ isActiveRoute regex='dashboard' }}"><a href="{{ pathFor 'dashboard' }}"><i class="fa fa-gear"></i> Dashboard</a></li>
-          <li class="{{ isActiveRoute regex='addItem' }}"><a href="{{ pathFor 'addItem' }}"><i class="fa fa-home"></i>Add car</a></li>
+          <!-- <li class="{{ isActiveRoute regex='home' }}"><a href="{{ pathFor 'home' }}"><i class="fa fa-home"></i> Home</a></li>
+          <li class="{{ isActiveRoute regex='dashboard' }}"><a href="{{ pathFor 'dashboard' }}"><i class="fa fa-gear"></i> Dashboard</a></li> -->
+          <li class="{{ isActiveRoute regex='addItem' }}"><a href="{{ pathFor 'addItem' }}">Add Item</a></li>
+          <li class="{{ isActiveRoute regex='itemList' }}"><a href="{{ pathFor 'itemList' }}">Item List</a></li>
 
+
+          <!-- <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li class="{{ isActiveRoute regex='addItem' }}"><a href="{{ pathFor 'addItem' }}">Add Item</a></li>
+              <li class="{{ isActiveRoute regex='itemList' }}"><a href="{{ pathFor 'itemList' }}">Item List</a></li>
+
+            </ul>
+          </li> -->
         </ul>
+
+
+
+
       </div>
 
     </div>
